--- a/app/src/main/res/layout/activity_ordem_servico_visualiza.xml
+++ b/app/src/main/res/layout/activity_ordem_servico_visualiza.xml
@@ -125,6 +125,12 @@
             android:textSize="30sp"
             android:textStyle="bold"
             android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/buttonOrdemVisualizaComentarios"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Comentários" />
     </LinearLayout>
 
     <LinearLayout
