--- a/app/src/main/res/layout/comentario_card.xml
+++ b/app/src/main/res/layout/comentario_card.xml
@@ -8,7 +8,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:padding="12dp"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
